<resources>
    <string name="app_name">WeatherAPI</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="empty">Empty</string>
    <string name="current_data_and_time">Current data and time</string>
    <string name="city_name">City name</string>
    <string name="temperature">Temperature</string>
    <string name="weather_condition">Weather Condition</string>
    <string name="min_max_temp">Min/max temp</string>
</resources>